Update Debug and DateTime Lib.ipynb

--- a/Debug and DateTime Lib.ipynb
+++ b/Debug and DateTime Lib.ipynb
@@ -54,7 +54,7 @@
     "    result1 = y + x\n",
     "    print(result)\n",
     "except :\n",
-    "    print(\"you tried adding {} and {}\".format(type(x),type(y)))\n",
+    "    print(\"you tried adding {0} and {1}\".format(type(x),type(y)))\n",
     "    "
    ]
   },
@@ -346,7 +346,7 @@
     "            self.name = name\n",
     "            self.dob = datetime.date(1999,8,8)\n",
     "        def birthday(self):\n",
-    "            print(\"Your Name Is {} And You Are Born On {} August {}\".format(self.name,self.dob.day,self.dob.year))\n",
+    "            print(\"Your Name Is {0} And You Are Born On {1} August {2}\".format(self.name,self.dob.day,self.dob.year))\n",
     "    x = Student(\"Tanmay\")\n",
     "    x.birthday()\n",
     "except:\n",
