updated basic worrk

--- a/basic-work.ipynb
+++ b/basic-work.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "a=2\n",
     "b=3\n",
-    "c=(a+b)**2\n",
+    "c=(a-b)**2\n",
     "print(c)"
    ]
   },
@@ -34,8 +34,8 @@
     }
    ],
    "source": [
-    "name=\"tanmay\"\n",
-    "course=\"mca\"\n",
+    "name=\"vasu\"\n",
+    "course=\"mca1\"\n",
     "print((name+course)*2)"
    ]
   },
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "name=\"hello i am tanmay\"\n",
+    "name=\"hello i am vasu\"\n",
     "print(name[1:4])\n",
     "print(name[:8])\n",
     "print(name[7:])\n",
