--- a/list_comprehensions.ipynb
+++ b/list_comprehensions.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "list1 = []\n",
-    "for char in \"Tanmay\":\n",
+    "for char in \"Tanmay Saxena\":\n",
     "    list1.append(char)"
    ]
   },
